# sprite-nyc

./: .gitignore  CLAUDE.md  PLAN.md  README.md  landmarks.json  pyproject.toml  view.json
.claude/: settings.local.json
generations/test/: generation_config.json
interactive_plan/: 01_overview.md  02_renderer.md  03_data_sources.md  04_simulation.md  05_sprites.md  06_integration.md  07_milestones.md  08_public_transit.md  09_building_occlusion.md  README.md
src/sprite_nyc/: __init__.py  batch_export.py  batch_generate.py  create_template.py  export_views.py  gcs_upload.py  generate_tile.py  generate_tile_oxen.py  plan_tiles.py  validate_plan.py
src/sprite_nyc/e2e_generation/: __init__.py  auto_generate.py  export_quadrants.py  export_tiles.py  generate_omni.py  generate_tile_omni.py  generate_tiles_omni.py  import_quadrants.py  infill_template.py  make_strip_plan.py  populate_renders.py  replace_color.py  seed_tiles.py  view_generations.py  visualize_bounds.py
src/sprite_nyc/synthetic_data/: __init__.py  create_infill_dataset.py  create_inpainting_examples.py  create_omni_dataset.py
synthetic_data/omni_v02/: omni_dataset.csv
viewer/: index.html  viewer.js
web/: index.html  main.js  package-lock.json  package.json  vite.config.js
